Fix footer theme switch alignment (#82)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -350,9 +350,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .theme-switch-container {
     display: flex;
-    justify-content: flex-end;
     margin-left: auto;
-    grid-column: 3;
+    justify-content: flex-end;
+
 }
 
 .footer-links .theme-switch-container {
@@ -870,6 +870,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     gap: 1rem;
+    flex-grow: 1;
 }
 
 .footer a {
